frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> empty
Rule 3     program -> program function
Rule 4     program -> program globaldeclaration
Rule 5     globaldeclaration -> type Identifier Semi
Rule 6     globaldeclaration -> type Identifier Assign expression Semi
Rule 7     type -> Int
Rule 8     function -> type Identifier LParen parameterlist RParen Semi
Rule 9     function -> type Identifier LParen parameterlist RParen LBrace block RBrace
Rule 10    parameterlist -> empty
Rule 11    parameterlist -> parameter
Rule 12    parameterlist -> parameterlist Comma parameter
Rule 13    parameter -> type Identifier
Rule 14    expressionlist -> empty
Rule 15    expressionlist -> expression
Rule 16    expressionlist -> expressionlist Comma expression
Rule 17    block -> block block_item
Rule 18    block -> empty
Rule 19    block_item -> statement
Rule 20    block_item -> declaration Semi
Rule 21    statement -> statement_matched
Rule 22    statement -> statement_unmatched
Rule 23    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 24    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 25    statement_unmatched -> If LParen expression RParen statement
Rule 26    statement_matched -> While LParen expression RParen statement_matched
Rule 27    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 28    statement_matched -> For LParen expression Semi expression Semi expression RParen statement_matched
Rule 29    statement_matched -> For LParen declaration Semi expression Semi expression RParen statement_matched
Rule 30    statement_unmatched -> For LParen expression Semi expression Semi expression RParen statement_unmatched
Rule 31    statement_unmatched -> For LParen declaration Semi expression Semi expression RParen statement_unmatched
Rule 32    statement_matched -> For LParen Semi expression Semi expression RParen statement_matched
Rule 33    statement_unmatched -> For LParen Semi expression Semi expression RParen statement_unmatched
Rule 34    statement_matched -> For LParen expression Semi Semi expression RParen statement_matched
Rule 35    statement_matched -> For LParen declaration Semi Semi expression RParen statement_matched
Rule 36    statement_unmatched -> For LParen expression Semi Semi expression RParen statement_unmatched
Rule 37    statement_unmatched -> For LParen declaration Semi Semi expression RParen statement_unmatched
Rule 38    statement_matched -> For LParen expression Semi expression Semi RParen statement_matched
Rule 39    statement_matched -> For LParen declaration Semi expression Semi RParen statement_matched
Rule 40    statement_unmatched -> For LParen expression Semi expression Semi RParen statement_unmatched
Rule 41    statement_unmatched -> For LParen declaration Semi expression Semi RParen statement_unmatched
Rule 42    statement_matched -> For LParen expression Semi Semi RParen statement_matched
Rule 43    statement_matched -> For LParen declaration Semi Semi RParen statement_matched
Rule 44    statement_unmatched -> For LParen expression Semi Semi RParen statement_unmatched
Rule 45    statement_unmatched -> For LParen declaration Semi Semi RParen statement_unmatched
Rule 46    statement_matched -> For LParen Semi expression Semi RParen statement_matched
Rule 47    statement_unmatched -> For LParen Semi expression Semi RParen statement_unmatched
Rule 48    statement_matched -> For LParen Semi Semi expression RParen statement_matched
Rule 49    statement_unmatched -> For LParen Semi Semi expression RParen statement_unmatched
Rule 50    statement_matched -> For LParen Semi Semi RParen statement_matched
Rule 51    statement_unmatched -> For LParen Semi Semi RParen statement_unmatched
Rule 52    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 53    statement_unmatched -> Do statement_unmatched While LParen expression RParen Semi
Rule 54    statement_matched -> Return expression Semi
Rule 55    statement_matched -> opt_expression Semi
Rule 56    statement_matched -> LBrace block RBrace
Rule 57    statement_matched -> Break Semi
Rule 58    statement_matched -> Continue Semi
Rule 59    opt_expression -> expression
Rule 60    opt_expression -> empty
Rule 61    declaration -> type Identifier
Rule 62    declaration -> type Identifier Assign expression
Rule 63    expression -> assignment
Rule 64    assignment -> conditional
Rule 65    conditional -> logical_or
Rule 66    logical_or -> logical_and
Rule 67    logical_and -> bit_or
Rule 68    bit_or -> xor
Rule 69    xor -> bit_and
Rule 70    bit_and -> equality
Rule 71    equality -> relational
Rule 72    relational -> additive
Rule 73    additive -> multiplicative
Rule 74    multiplicative -> unary
Rule 75    unary -> postfix
Rule 76    postfix -> primary
Rule 77    postfix -> Identifier LParen expressionlist RParen
Rule 78    unary -> Minus unary
Rule 79    unary -> BitNot unary
Rule 80    unary -> Not unary
Rule 81    assignment -> Identifier Assign expression
Rule 82    logical_or -> logical_or Or logical_and
Rule 83    logical_and -> logical_and And bit_or
Rule 84    bit_or -> bit_or BitOr xor
Rule 85    xor -> xor Xor bit_and
Rule 86    bit_and -> bit_and BitAnd equality
Rule 87    equality -> equality NotEqual relational
Rule 88    equality -> equality Equal relational
Rule 89    relational -> relational Less additive
Rule 90    relational -> relational Greater additive
Rule 91    relational -> relational LessEqual additive
Rule 92    relational -> relational GreaterEqual additive
Rule 93    additive -> additive Plus multiplicative
Rule 94    additive -> additive Minus multiplicative
Rule 95    multiplicative -> multiplicative Mul unary
Rule 96    multiplicative -> multiplicative Div unary
Rule 97    multiplicative -> multiplicative Mod unary
Rule 98    conditional -> logical_or Question expression Colon conditional
Rule 99    primary -> Integer
Rule 100   primary -> Identifier
Rule 101   primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 83
Assign               : 6 62 81
BitAnd               : 86
BitNot               : 79
BitOr                : 84
Break                : 57
Colon                : 98
Comma                : 12 16
Continue             : 58
Div                  : 96
Do                   : 52 53
Else                 : 23 24
Equal                : 88
For                  : 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
Greater              : 90
GreaterEqual         : 92
Identifier           : 5 6 8 9 13 61 62 77 81 100
If                   : 23 24 25
Int                  : 7
Integer              : 99
LBrace               : 9 56
LParen               : 8 9 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 77 101
Less                 : 89
LessEqual            : 91
Minus                : 78 94
Mod                  : 97
Mul                  : 95
Not                  : 80
NotEqual             : 87
Or                   : 82
Plus                 : 93
Question             : 98
RBrace               : 9 56
RParen               : 8 9 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 77 101
Return               : 54
Semi                 : 5 6 8 20 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 54 55 57 58
While                : 26 27 52 53
Xor                  : 85
error                : 

Nonterminals, with rules where they appear

additive             : 72 89 90 91 92 93 94
assignment           : 63
bit_and              : 69 85 86
bit_or               : 67 83 84
block                : 9 17 56
block_item           : 17
conditional          : 64 98
declaration          : 20 29 31 35 37 39 41 43 45
empty                : 2 10 14 18 60
equality             : 70 86 87 88
expression           : 6 15 16 23 24 25 26 27 28 28 28 29 29 30 30 30 31 31 32 32 33 33 34 34 35 36 36 37 38 38 39 40 40 41 42 44 46 47 48 49 52 53 54 59 62 81 98 101
expressionlist       : 16 77
function             : 3
globaldeclaration    : 4
logical_and          : 66 82 83
logical_or           : 65 82 98
multiplicative       : 73 93 94 95 96 97
opt_expression       : 55
parameter            : 11 12
parameterlist        : 8 9 12
postfix              : 75
primary              : 76
program              : 3 4 0
relational           : 71 87 88 89 90 91 92
statement            : 19 25
statement_matched    : 21 23 23 24 26 28 29 32 34 35 38 39 42 43 46 48 50 52
statement_unmatched  : 22 24 27 30 31 33 36 37 40 41 44 45 47 49 51 53
type                 : 5 6 8 9 13 61 62
unary                : 74 78 79 80 95 96 97
xor                  : 68 84 85

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . empty
    (3) program -> . program function
    (4) program -> . program globaldeclaration
    (1) empty -> .

    Int             reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (3) program -> program . function
    (4) program -> program . globaldeclaration
    (8) function -> . type Identifier LParen parameterlist RParen Semi
    (9) function -> . type Identifier LParen parameterlist RParen LBrace block RBrace
    (5) globaldeclaration -> . type Identifier Semi
    (6) globaldeclaration -> . type Identifier Assign expression Semi
    (7) type -> . Int

    Int             shift and go to state 6

    function                       shift and go to state 3
    globaldeclaration              shift and go to state 4
    type                           shift and go to state 5

state 2

    (2) program -> empty .

    Int             reduce using rule 2 (program -> empty .)
    $end            reduce using rule 2 (program -> empty .)


state 3

    (3) program -> program function .

    Int             reduce using rule 3 (program -> program function .)
    $end            reduce using rule 3 (program -> program function .)


state 4

    (4) program -> program globaldeclaration .

    Int             reduce using rule 4 (program -> program globaldeclaration .)
    $end            reduce using rule 4 (program -> program globaldeclaration .)


state 5

    (8) function -> type . Identifier LParen parameterlist RParen Semi
    (9) function -> type . Identifier LParen parameterlist RParen LBrace block RBrace
    (5) globaldeclaration -> type . Identifier Semi
    (6) globaldeclaration -> type . Identifier Assign expression Semi

    Identifier      shift and go to state 7


state 6

    (7) type -> Int .

    Identifier      reduce using rule 7 (type -> Int .)


state 7

    (8) function -> type Identifier . LParen parameterlist RParen Semi
    (9) function -> type Identifier . LParen parameterlist RParen LBrace block RBrace
    (5) globaldeclaration -> type Identifier . Semi
    (6) globaldeclaration -> type Identifier . Assign expression Semi

    LParen          shift and go to state 8
    Semi            shift and go to state 9
    Assign          shift and go to state 10


state 8

    (8) function -> type Identifier LParen . parameterlist RParen Semi
    (9) function -> type Identifier LParen . parameterlist RParen LBrace block RBrace
    (10) parameterlist -> . empty
    (11) parameterlist -> . parameter
    (12) parameterlist -> . parameterlist Comma parameter
    (1) empty -> .
    (13) parameter -> . type Identifier
    (7) type -> . Int

    RParen          reduce using rule 1 (empty -> .)
    Comma           reduce using rule 1 (empty -> .)
    Int             shift and go to state 6

    type                           shift and go to state 11
    parameterlist                  shift and go to state 12
    empty                          shift and go to state 13
    parameter                      shift and go to state 14

state 9

    (5) globaldeclaration -> type Identifier Semi .

    Int             reduce using rule 5 (globaldeclaration -> type Identifier Semi .)
    $end            reduce using rule 5 (globaldeclaration -> type Identifier Semi .)


state 10

    (6) globaldeclaration -> type Identifier Assign . expression Semi
    (63) expression -> . assignment
    (64) assignment -> . conditional
    (81) assignment -> . Identifier Assign expression
    (65) conditional -> . logical_or
    (98) conditional -> . logical_or Question expression Colon conditional
    (66) logical_or -> . logical_and
    (82) logical_or -> . logical_or Or logical_and
    (67) logical_and -> . bit_or
    (83) logical_and -> . logical_and And bit_or
    (68) bit_or -> . xor
    (84) bit_or -> . bit_or BitOr xor
    (69) xor -> . bit_and
    (85) xor -> . xor Xor bit_and
    (70) bit_and -> . equality
    (86) bit_and -> . bit_and BitAnd equality
    (71) equality -> . relational
    (87) equality -> . equality NotEqual relational
    (88) equality -> . equality Equal relational
    (72) relational -> . additive
    (89) relational -> . relational Less additive
    (90) relational -> . relational Greater additive
    (91) relational -> . relational LessEqual additive
    (92) relational -> . relational GreaterEqual additive
    (73) additive -> . multiplicative
    (93) additive -> . additive Plus multiplicative
    (94) additive -> . additive Minus multiplicative
    (74) multiplicative -> . unary
    (95) multiplicative -> . multiplicative Mul unary
    (96) multiplicative -> . multiplicative Div unary
    (97) multiplicative -> . multiplicative Mod unary
    (75) unary -> . postfix
    (78) unary -> . Minus unary
    (79) unary -> . BitNot unary
    (80) unary -> . Not unary
    (76) postfix -> . primary
    (77) postfix -> . Identifier LParen expressionlist RParen
    (99) primary -> . Integer
    (100) primary -> . Identifier
    (101) primary -> . LParen expression RParen

    Identifier      shift and go to state 15
    Minus           shift and go to state 28
    BitNot          shift and go to state 31
    Not             shift and go to state 32
    Integer         shift and go to state 35
    LParen          shift and go to state 34

    expression                     shift and go to state 16
    assignment                     shift and go to state 17
    conditional                    shift and go to state 18
    logical_or                     shift and go to state 19
    logical_and                    shift and go to state 20
    bit_or                         shift and go to state 21
    xor                            shift and go to state 22
    bit_and                        shift and go to state 23
    equality                       shift and go to state 24
    relational                     shift and go to state 25
    additive                       shift and go to state 26
    multiplicative                 shift and go to state 27
    unary                          shift and go to state 29
    postfix                        shift and go to state 30
    primary                        shift and go to state 33

state 11

    (13) parameter -> type . Identifier

    Identifier      shift and go to state 36


state 12

    (8) function -> type Identifier LParen parameterlist . RParen Semi
    (9) function -> type Identifier LParen parameterlist . RParen LBrace block RBrace
    (12) parameterlist -> parameterlist . Comma parameter

    RParen          shift and go to state 37
    Comma           shift and go to state 38


state 13

    (10) parameterlist -> empty .

    RParen          reduce using rule 10 (parameterlist -> empty .)
    Comma           reduce using rule 10 (parameterlist -> empty .)


state 14

    (11) parameterlist -> parameter .

    RParen          reduce using rule 11 (parameterlist -> parameter .)
    Comma           reduce using rule 11 (parameterlist -> parameter .)


state 15

    (81) assignment -> Identifier . Assign expression
    (77) postfix -> Identifier . LParen expressionlist RParen
    (100) primary -> Identifier .

    Assign          shift and go to state 39
    LParen          shift and go to state 40
    Mul             reduce using rule 100 (primary -> Identifier .)
    Div             reduce using rule 100 (primary -> Identifier .)
    Mod             reduce using rule 100 (primary -> Identifier .)
    Plus            reduce using rule 100 (primary -> Identifier .)
    Minus           reduce using rule 100 (primary -> Identifier .)
    Less            reduce using rule 100 (primary -> Identifier .)
    Greater         reduce using rule 100 (primary -> Identifier .)
    LessEqual       reduce using rule 100 (primary -> Identifier .)
    GreaterEqual    reduce using rule 100 (primary -> Identifier .)
    NotEqual        reduce using rule 100 (primary -> Identifier .)
    Equal           reduce using rule 100 (primary -> Identifier .)
    BitAnd          reduce using rule 100 (primary -> Identifier .)
    Xor             reduce using rule 100 (primary -> Identifier .)
    BitOr           reduce using rule 100 (primary -> Identifier .)
    And             reduce using rule 100 (primary -> Identifier .)
    Question        reduce using rule 100 (primary -> Identifier .)
    Or              reduce using rule 100 (primary -> Identifier .)
    Semi            reduce using rule 100 (primary -> Identifier .)
    RParen          reduce using rule 100 (primary -> Identifier .)
    Comma           reduce using rule 100 (primary -> Identifier .)
    Colon           reduce using rule 100 (primary -> Identifier .)


state 16

    (6) globaldeclaration -> type Identifier Assign expression . Semi

    Semi            shift and go to state 41


state 17

    (63) expression -> assignment .

    Semi            reduce using rule 63 (expression -> assignment .)
    RParen          reduce using rule 63 (expression -> assignment .)
    Comma           reduce using rule 63 (expression -> assignment .)
    Colon           reduce using rule 63 (expression -> assignment .)


state 18

    (64) assignment -> conditional .

    Semi            reduce using rule 64 (assignment -> conditional .)
    RParen          reduce using rule 64 (assignment -> conditional .)
    Comma           reduce using rule 64 (assignment -> conditional .)
    Colon           reduce using rule 64 (assignment -> conditional .)


state 19

    (65) conditional -> logical_or .
    (98) conditional -> logical_or . Question expression Colon conditional
    (82) logical_or -> logical_or . Or logical_and

    Semi            reduce using rule 65 (conditional -> logical_or .)
    RParen          reduce using rule 65 (conditional -> logical_or .)
    Comma           reduce using rule 65 (conditional -> logical_or .)
    Colon           reduce using rule 65 (conditional -> logical_or .)
    Question        shift and go to state 42
    Or              shift and go to state 43


state 20

    (66) logical_or -> logical_and .
    (83) logical_and -> logical_and . And bit_or

    Question        reduce using rule 66 (logical_or -> logical_and .)
    Or              reduce using rule 66 (logical_or -> logical_and .)
    Semi            reduce using rule 66 (logical_or -> logical_and .)
    RParen          reduce using rule 66 (logical_or -> logical_and .)
    Comma           reduce using rule 66 (logical_or -> logical_and .)
    Colon           reduce using rule 66 (logical_or -> logical_and .)
    And             shift and go to state 44


state 21

    (67) logical_and -> bit_or .
    (84) bit_or -> bit_or . BitOr xor

    And             reduce using rule 67 (logical_and -> bit_or .)
    Question        reduce using rule 67 (logical_and -> bit_or .)
    Or              reduce using rule 67 (logical_and -> bit_or .)
    Semi            reduce using rule 67 (logical_and -> bit_or .)
    RParen          reduce using rule 67 (logical_and -> bit_or .)
    Comma           reduce using rule 67 (logical_and -> bit_or .)
    Colon           reduce using rule 67 (logical_and -> bit_or .)
    BitOr           shift and go to state 45


state 22

    (68) bit_or -> xor .
    (85) xor -> xor . Xor bit_and

    BitOr           reduce using rule 68 (bit_or -> xor .)
    And             reduce using rule 68 (bit_or -> xor .)
    Question        reduce using rule 68 (bit_or -> xor .)
    Or              reduce using rule 68 (bit_or -> xor .)
    Semi            reduce using rule 68 (bit_or -> xor .)
    RParen          reduce using rule 68 (bit_or -> xor .)
    Comma           reduce using rule 68 (bit_or -> xor .)
    Colon           reduce using rule 68 (bit_or -> xor .)
    Xor             shift and go to state 46


state 23

    (69) xor -> bit_and .
    (86) bit_and -> bit_and . BitAnd equality

    Xor             reduce using rule 69 (xor -> bit_and .)
    BitOr           reduce using rule 69 (xor -> bit_and .)
    And             reduce using rule 69 (xor -> bit_and .)
    Question        reduce using rule 69 (xor -> bit_and .)
    Or              reduce using rule 69 (xor -> bit_and .)
    Semi            reduce using rule 69 (xor -> bit_and .)
    RParen          reduce using rule 69 (xor -> bit_and .)
    Comma           reduce using rule 69 (xor -> bit_and .)
    Colon           reduce using rule 69 (xor -> bit_and .)
    BitAnd          shift and go to state 47


state 24

    (70) bit_and -> equality .
    (87) equality -> equality . NotEqual relational
    (88) equality -> equality . Equal relational

    BitAnd          reduce using rule 70 (bit_and -> equality .)
    Xor             reduce using rule 70 (bit_and -> equality .)
    BitOr           reduce using rule 70 (bit_and -> equality .)
    And             reduce using rule 70 (bit_and -> equality .)
    Question        reduce using rule 70 (bit_and -> equality .)
    Or              reduce using rule 70 (bit_and -> equality .)
    Semi            reduce using rule 70 (bit_and -> equality .)
    RParen          reduce using rule 70 (bit_and -> equality .)
    Comma           reduce using rule 70 (bit_and -> equality .)
    Colon           reduce using rule 70 (bit_and -> equality .)
    NotEqual        shift and go to state 48
    Equal           shift and go to state 49


state 25

    (71) equality -> relational .
    (89) relational -> relational . Less additive
    (90) relational -> relational . Greater additive
    (91) relational -> relational . LessEqual additive
    (92) relational -> relational . GreaterEqual additive

    NotEqual        reduce using rule 71 (equality -> relational .)
    Equal           reduce using rule 71 (equality -> relational .)
    BitAnd          reduce using rule 71 (equality -> relational .)
    Xor             reduce using rule 71 (equality -> relational .)
    BitOr           reduce using rule 71 (equality -> relational .)
    And             reduce using rule 71 (equality -> relational .)
    Question        reduce using rule 71 (equality -> relational .)
    Or              reduce using rule 71 (equality -> relational .)
    Semi            reduce using rule 71 (equality -> relational .)
    RParen          reduce using rule 71 (equality -> relational .)
    Comma           reduce using rule 71 (equality -> relational .)
    Colon           reduce using rule 71 (equality -> relational .)
    Less            shift and go to state 50
    Greater         shift and go to state 51
    LessEqual       shift and go to state 52
    GreaterEqual    shift and go to state 53


state 26

    (72) relational -> additive .
    (93) additive -> additive . Plus multiplicative
    (94) additive -> additive . Minus multiplicative

    Less            reduce using rule 72 (relational -> additive .)
    Greater         reduce using rule 72 (relational -> additive .)
    LessEqual       reduce using rule 72 (relational -> additive .)
    GreaterEqual    reduce using rule 72 (relational -> additive .)
    NotEqual        reduce using rule 72 (relational -> additive .)
    Equal           reduce using rule 72 (relational -> additive .)
    BitAnd          reduce using rule 72 (relational -> additive .)
    Xor             reduce using rule 72 (relational -> additive .)
    BitOr           reduce using rule 72 (relational -> additive .)
    And             reduce using rule 72 (relational -> additive .)
    Question        reduce using rule 72 (relational -> additive .)
    Or              reduce using rule 72 (relational -> additive .)
    Semi            reduce using rule 72 (relational -> additive .)
    RParen          reduce using rule 72 (relational -> additive .)
    Comma           reduce using rule 72 (relational -> additive .)
    Colon           reduce using rule 72 (relational -> additive .)
    Plus            shift and go to state 54
    Minus           shift and go to state 55


state 27
